--- a/S05T01/src/main/resources/application.properties
+++ b/S05T01/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=S05T01
 debug=false
 
-# MongoDB local
-spring.data.mongodb.uri=mongodb://localhost:27017/tu_nombre_db
+# MongoDB local (Basado en tu docker-compose)
+spring.data.mongodb.uri=mongodb://localhost:27017/s05t01_mongo
 
 # MySQL local (R2DBC)
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/tu_nombre_db
+# Nota: Cambiamos 'tu_nombre_db' por 's05t01_db'
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/s05t01_db
 spring.r2dbc.username=root
-spring.r2dbc.password=tu_password
+spring.r2dbc.password=root
 
 #spring.sql.init.mode=always
 
