--- a/S05T01/docker-compose.yml
+++ b/S05T01/docker-compose.yml
@@ -19,3 +19,15 @@ services:
       MONGO_INITDB_DATABASE: s05t01_mongo
     volumes:
       - ./db-data/mongo:/data/db
+
+  spring-app:
+    build: .
+    container_name: spring-app
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_R2DBC_URL: r2dbc:mysql://mysql-db:3306/s05t01_db
+      SPRING_DATA_MONGODB_URI: mongodb://mongo-db:27017/s05t01_mongo
+    depends_on:
+      - mysql-db
+      - mongo-db
